--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,17 @@
 .liststudent{
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
+  row-gap: 50px;
+  column-gap: 10px;
+ 
+  /* column-gap: 3%; */
+  
+}
+
+.listdisplay{
+  display: flex;
+  flex-wrap: wrap;
   row-gap: 50px;
   column-gap: 10px;
  
